LU-6981 target: update obd_last_committed

In tgt_reply_data_init(), it should update
last_committed after analyzing those reply_data,
similar as tgt_server_data_init(), otherwise
obd_last_committed might be smaller than the real
committed transno, and then cause recovery_thread
stuck in check_for_next_transno(), which rely on
the correct last committed transno.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Id036c41028c5bc5bf45f6ad300756e0653929bb3
Reviewed-on: http://review.whamcloud.com/15971
Tested-by: Jenkins
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Grégoire Pichon <gregoire.pichon@bull.net>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>